various fixes, lang additions
- Fixed send button remaining inactive after pasting content into the
message box via context menu.
- Fixed embed embedding Forumactif Messenger in the body when the
specified selector wasn't available.
- Fixed "open a new tab" overlay overlapping the toolbar and tabs,
preventing interaction with them.
- Fixed previously closed tab still loading its contents even after all
tabs were closed.
- Fixed back button remaining visible after all tabs were closed.
- Fixed empty sponsored content messages displaying in chats.
- Added the following language aliases for options in admin
configuration.
- config_permission_all
- config_permission_member
- config_permission_staff
- config_channel_production
- config_channel_developer

--- a/fam.css
+++ b/fam.css
@@ -233,7 +233,14 @@
   margin-bottom:12px;
 }
 
-#FAM-no-tabs { cursor:pointer; }
+#FAM-no-tabs {
+  top:69px;
+  cursor:pointer;
+}
+
+#FAM-tab-container[style*=none] + #FAM-content #FAM-no-tabs {
+  top:39px;
+}
 
 #FAM-idle {
   color:#FFF;
